[build-system]
requires = [
    "setuptools>=61.0",
    "Cython~=3.0.0b1"
]
build-backend = "setuptools.build_meta"

[project]
name = "empire-commons"
version = "1.0"
authors = [
    {name="Yann Tremblay", email="yanntremblay@tombmyst.ca"}
]
description = "Basic toolbox used among other projects"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "bidict~=0.22.1",
    "Cython~=3.0.0b1",
    "diskcache~=5.5.1",
    "frozendict~=2.3.7",
    "python-dateutil~=2.8.2",
    "rapidfuzz~=2.15.1",
    "regex~=2023.3.23"
]

[project.optional-dependencies]
tests = ["requirements_dev.txt"]

[project.urls]
"Homepage" = "https://github.com/Tombmyst/empire-commons"
"Bug Tracker" = "https://github.com/Tombmyst/empire-commons/issues"

[tool.pytest.ini_options]
minversion = "7.3.1"
python_files = "test_*.py"
testpaths = [
    "tests"
]
pythonpath = "."

[tool.black]
line-length = 150

[tool.pylint.master]
py-version = "3.10"
recursive = true
jobs = 0

[tool.pylint.'MESSAGE CONTROL']
confidence = "UNDEFINED"

[tool.pylint.reports]
output-format = "colorized"